--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,8 +1,12 @@
 SilvaPhotoGallery HISTORY
 =========================
 
-Release infrae-1.2:
-===================
+Release infrae-1.2 (2007/05/29):
+================================
+
+2007/06/28
+
+        - removed xslt rendering bug
 
 Release infrae-1.1 (2007/05/29):
 ================================
