--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,96 +1,105 @@
 SilvaPhotoGallery HISTORY
 =========================
 
-        - adding Hebrew translations. Thanks @ Ofer Weisglass
+Release infrae-1.4 (2009/08/17):
+================================
+
+  - adding Hebrew translations. Thanks @ Ofer Weisglass
 
 Release infrae-1.3 (2007/07/06):
 ================================
 
 2007/07/06
 
-        - fixed removing/adding PhotoGallery CS bug
-          that caused a view allready in use error
+  - fixed removing/adding PhotoGallery CS bug
+  that caused a view allready in use error
 
 Release infrae-1.2 (2007/06/28):
 ================================
 
 2007/06/28
 
-        - removed xslt rendering bug
+  - removed xslt rendering bug
 
 Release infrae-1.1 (2007/05/29):
 ================================
 
 2007/05/29
 
-        - removed old manage after_add which broke SilvaPhotoGallery
+  - removed old manage after_add which broke SilvaPhotoGallery
 
 2007/05/24
 
-        - made compliant with Silva 2.0
+  - made compliant with Silva 2.0
 
 2007/05/04:
 
-    	- removed 00 in rendering.
+  - removed 00 in rendering.
 
 2007/05/02:
 
-        - adding class="p" for paragraphs.
+  - adding class="p" for paragraphs.
 
-        - changing translation of outdated "Diaschau" to "Dia-Show".
+  - changing translation of outdated "Diaschau" to "Dia-Show".
 
 2007/04/24:
 
-	- i18n-ing of the product.
+  - i18n-ing of the product.
 
 Release 1.0  (2007/01/19):
 =========================
 
 2007/01/19:
 
-	- fixed problems with slideshow.
+  - fixed problems with slideshow.
 
-	- updated to the newest code source product
-          (SilvaExternalSources 1.1).
+  - updated to the newest code source product
+  (SilvaExternalSources 1.1).
 
 
 Release 0.9  (2006/09/13):
 =========================
 
 2006/07/03:
-	- _form_translation.py:
-		- Fixed bug cause by incorrect id.
+
+  - _form_translation.py:
+  - Fixed bug cause by incorrect id.
 
 2006/06/29:
-	- i18n/...:
-		- Adjusted to Silva 1.5 (Zope 3 technology).
-	- PhotoGallery.py:
-		- Adjusted to Silva 1.5 (Zope 3 technology).
+
+  - i18n/...:
+  - Adjusted to Silva 1.5 (Zope 3 technology).
+  - PhotoGallery.py:
+  - Adjusted to Silva 1.5 (Zope 3 technology).
 
 2006/05/03:
-	- PhotoGallery.py:
-		- Made method getSlideShow() correct for Ligthbox v2.02 and adjusted translations.
-	- www/lightbox.js.dtml:
-		- Added resizeToFit() and slideshow_XXX() functions.
-	- www/photo_gallery_view.pt:
-		- Corrected thumbnail view and slideshow functionality.
-	- www/photo_gallery.css.dtml:
-		- Removed lightbox css tags.
+
+  - PhotoGallery.py:
+  - Made method getSlideShow() correct for Ligthbox v2.02 and adjusted translations.
+  - www/lightbox.js.dtml:
+  - Added resizeToFit() and slideshow_XXX() functions.
+  - www/photo_gallery_view.pt:
+  - Corrected thumbnail view and slideshow functionality.
+  - www/photo_gallery.css.dtml:
+  - Removed lightbox css tags.
 
 2006/04/26:
-	- PhotoGallery.py:
-		- Integrated resources of Ligthbox v2.02.
-	- www/photo_gallery_view.pt:
-		- Integrated Ligthbox v2.02.
-	- www/gallery_helper_scripts.js.dtml:
-		- Improved switching of display of help text.
+
+  - PhotoGallery.py:
+  - Integrated resources of Ligthbox v2.02.
+  - www/photo_gallery_view.pt:
+  - Integrated Ligthbox v2.02.
+  - www/gallery_helper_scripts.js.dtml:
+  - Improved switching of display of help text.
 
 2006/04/19:
-	- PhotoGallery.py:
-		- Changed options from 's' to 'sec' in method getSlideShow().
-	- www/captions.xml, lightbox.js.dtml and photo_gallery_view.pt:
-		- Made display of caption of selected/enlarged image dependent on show_caption setting.
+
+  - PhotoGallery.py:
+  - Changed options from 's' to 'sec' in method getSlideShow().
+  - www/captions.xml, lightbox.js.dtml and photo_gallery_view.pt:
+  - Made display of caption of selected/enlarged image dependent on show_caption setting.
 
 2006/04/13:
-	- Initial development based on the code source release on
-	  http://www.mat.ethz.ch/silva/silvaphotogallery/SilvaPhotoGallery.zexp.
+
+  - Initial development based on the code source release on
+  http://www.mat.ethz.ch/silva/silvaphotogallery/SilvaPhotoGallery.zexp.
