--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -1,6 +1,9 @@
 SilvaPhotoGallery HISTORY
 =========================
 
+Release infrae-1.5 (unreleased):
+================================
+
 Release infrae-1.4 (2009/08/17):
 ================================
 
