--- a/HISTORY.txt
+++ b/HISTORY.txt
@@ -4,6 +4,8 @@ SilvaPhotoGallery HISTORY
 Release infrae-1.5 (unreleased):
 ================================
 
+  - updating the javascript so it also hides object tags
+
 Release infrae-1.4 (2009/08/17):
 ================================
 
